--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,9 @@
 		"php": ">=5.3.0",
 		"composer/installers": "*",
 		"aschelch/cakephp-notification-plugin": "dev-master"
-	}
+	},
+	"license": [
+		"LGPL-2.1",
+		"GPL-3.0+"
+	]
 }
