--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
 	}],
 	"require": {
 		"php": ">=5.3.0",
-		"composer/installers": "*",
-		"aschelch/cakephp-notification-plugin": "dev-master"
+		"composer/installers": "*"
 	},
 	"license": [
 		"LGPL-2.1",
